// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hiscores getHiscores should default type to HiscoreTypes.normal 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should hit the specified hiscore type endpoint 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool_seasonal/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should make a GET request 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should make a request with the passed in player name 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should properly parse rank and kills for each boss 1`] = `
{
  "abyssalSire": {
    "kills": "250",
    "rank": "84221",
  },
  "alchemicalHydra": {
    "kills": "563",
    "rank": "86937",
  },
  "artio": {
    "kills": "29",
    "rank": "39422",
  },
  "barrowsChests": {
    "kills": "918",
    "rank": "23496",
  },
  "bryophyta": {
    "kills": "10",
    "rank": "98561",
  },
  "callisto": {
    "kills": "203",
    "rank": "37908",
  },
  "calvarion": {
    "kills": "-1",
    "rank": "-1",
  },
  "cerberus": {
    "kills": "1116",
    "rank": "43130",
  },
  "chambersOfXeric": {
    "kills": "362",
    "rank": "49400",
  },
  "chambersOfXericChallengeMode": {
    "kills": "31",
    "rank": "26014",
  },
  "chaosElemental": {
    "kills": "152",
    "rank": "28772",
  },
  "chaosFanatic": {
    "kills": "230",
    "rank": "16285",
  },
  "commanderZilyana": {
    "kills": "460",
    "rank": "30105",
  },
  "corporealBeast": {
    "kills": "238",
    "rank": "32892",
  },
  "corruptedGauntlet": {
    "kills": "160",
    "rank": "70828",
  },
  "crazyArchaeologist": {
    "kills": "639",
    "rank": "2131",
  },
  "dagannothPrime": {
    "kills": "501",
    "rank": "48496",
  },
  "dagannothRex": {
    "kills": "540",
    "rank": "58608",
  },
  "dagannothSupreme": {
    "kills": "715",
    "rank": "31130",
  },
  "derangedArchaeologist": {
    "kills": "50",
    "rank": "22737",
  },
  "dukeSucellus": {
    "kills": "53",
    "rank": "16639",
  },
  "gauntlet": {
    "kills": "21",
    "rank": "101569",
  },
  "generalGraardor": {
    "kills": "304",
    "rank": "103836",
  },
  "giantMole": {
    "kills": "681",
    "rank": "43103",
  },
  "grotesqueGuardians": {
    "kills": "250",
    "rank": "54505",
  },
  "hespori": {
    "kills": "10",
    "rank": "440882",
  },
  "kalphiteQueen": {
    "kills": "303",
    "rank": "34494",
  },
  "kingBlackDragon": {
    "kills": "94",
    "rank": "267332",
  },
  "kraken": {
    "kills": "1122",
    "rank": "189991",
  },
  "kreearra": {
    "kills": "253",
    "rank": "45150",
  },
  "krilTsutsaroth": {
    "kills": "558",
    "rank": "11657",
  },
  "leviathan": {
    "kills": "24",
    "rank": "9825",
  },
  "mimic": {
    "kills": "1",
    "rank": "98262",
  },
  "nex": {
    "kills": "402",
    "rank": "33720",
  },
  "nightmare": {
    "kills": "151",
    "rank": "21406",
  },
  "obor": {
    "kills": "11",
    "rank": "104505",
  },
  "phantomMuspah": {
    "kills": "105",
    "rank": "38484",
  },
  "phosanisNightmare": {
    "kills": "100",
    "rank": "15104",
  },
  "sarachnis": {
    "kills": "50",
    "rank": "122661",
  },
  "scorpia": {
    "kills": "151",
    "rank": "27850",
  },
  "skotizo": {
    "kills": "20",
    "rank": "216447",
  },
  "spindel": {
    "kills": "-1",
    "rank": "-1",
  },
  "tempoross": {
    "kills": "50",
    "rank": "267024",
  },
  "theatreOfBlood": {
    "kills": "550",
    "rank": "10718",
  },
  "theatreOfBloodHardMode": {
    "kills": "50",
    "rank": "8651",
  },
  "thermonuclearSmokeDevil": {
    "kills": "739",
    "rank": "68392",
  },
  "tombsOfAmascut": {
    "kills": "39",
    "rank": "81113",
  },
  "tombsOfAmascutExpertMode": {
    "kills": "108",
    "rank": "24474",
  },
  "tzKalZuk": {
    "kills": "13",
    "rank": "2922",
  },
  "tzTokJad": {
    "kills": "33",
    "rank": "11057",
  },
  "vardorvis": {
    "kills": "269",
    "rank": "8169",
  },
  "venenatis": {
    "kills": "187",
    "rank": "42602",
  },
  "vetion": {
    "kills": "103",
    "rank": "34219",
  },
  "vorkath": {
    "kills": "741",
    "rank": "91068",
  },
  "whisperer": {
    "kills": "34",
    "rank": "7711",
  },
  "wintertodt": {
    "kills": "122",
    "rank": "589999",
  },
  "zalcano": {
    "kills": "150",
    "rank": "58953",
  },
  "zulrah": {
    "kills": "3601",
    "rank": "17283",
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank and score for each minigame 1`] = `
{
  "bountyHunter": {
    "rank": "23417",
    "score": "8",
  },
  "bountyHunterLegacy": {
    "rank": "60751",
    "score": "49",
  },
  "bountyHunterRogues": {
    "rank": "-1",
    "score": "-1",
  },
  "bountyHunterRoguesLegacy": {
    "rank": "47505",
    "score": "23",
  },
  "clueScrollsAll": {
    "rank": "42398",
    "score": "762",
  },
  "clueScrollsBeginner": {
    "rank": "1304511",
    "score": "1",
  },
  "clueScrollsEasy": {
    "rank": "93819",
    "score": "52",
  },
  "clueScrollsElite": {
    "rank": "149450",
    "score": "21",
  },
  "clueScrollsHard": {
    "rank": "200804",
    "score": "97",
  },
  "clueScrollsMaster": {
    "rank": "52547",
    "score": "34",
  },
  "clueScrollsMedium": {
    "rank": "14020",
    "score": "557",
  },
  "leaguePoints": {
    "rank": "-1",
    "score": "-1",
  },
  "lms": {
    "rank": "14107",
    "score": "2348",
  },
  "pvpArena": {
    "rank": "222",
    "score": "4010",
  },
  "riftsClosed": {
    "rank": "148451",
    "score": "114",
  },
  "soulWarsZeal": {
    "rank": "-1",
    "score": "-1",
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank, level, and xp for each skill 1`] = `
{
  "agility": {
    "level": "99",
    "rank": "33109",
    "xp": "13311342",
  },
  "attack": {
    "level": "99",
    "rank": "37921",
    "xp": "25152516",
  },
  "construction": {
    "level": "99",
    "rank": "13824",
    "xp": "13332577",
  },
  "cooking": {
    "level": "99",
    "rank": "31005",
    "xp": "18342505",
  },
  "crafting": {
    "level": "99",
    "rank": "51121",
    "xp": "13739819",
  },
  "defence": {
    "level": "99",
    "rank": "15663",
    "xp": "26152190",
  },
  "farming": {
    "level": "99",
    "rank": "90162",
    "xp": "14729561",
  },
  "firemaking": {
    "level": "99",
    "rank": "79072",
    "xp": "13495334",
  },
  "fishing": {
    "level": "99",
    "rank": "49561",
    "xp": "13546091",
  },
  "fletching": {
    "level": "99",
    "rank": "6254",
    "xp": "20573009",
  },
  "herblore": {
    "level": "99",
    "rank": "6564",
    "xp": "15494407",
  },
  "hitpoints": {
    "level": "99",
    "rank": "19229",
    "xp": "64781004",
  },
  "hunter": {
    "level": "99",
    "rank": "34415",
    "xp": "13554349",
  },
  "magic": {
    "level": "99",
    "rank": "7140",
    "xp": "43468118",
  },
  "mining": {
    "level": "99",
    "rank": "41906",
    "xp": "13606515",
  },
  "overall": {
    "level": "2277",
    "rank": "13294",
    "xp": "526106150",
  },
  "prayer": {
    "level": "99",
    "rank": "63014",
    "xp": "13093675",
  },
  "ranged": {
    "level": "99",
    "rank": "26076",
    "xp": "60835870",
  },
  "runecrafting": {
    "level": "99",
    "rank": "18169",
    "xp": "14362827",
  },
  "slayer": {
    "level": "99",
    "rank": "40472",
    "xp": "17410558",
  },
  "smithing": {
    "level": "99",
    "rank": "19546",
    "xp": "13700333",
  },
  "strength": {
    "level": "99",
    "rank": "16360",
    "xp": "55199391",
  },
  "thieving": {
    "level": "99",
    "rank": "44936",
    "xp": "14108802",
  },
  "woodcutting": {
    "level": "99",
    "rank": "43326",
    "xp": "14115357",
  },
}
`;

exports[`Hiscores getHiscores should return skills, minigames, and bosses from a csv 1`] = `
{
  "bosses": {
    "abyssalSire": {
      "kills": "250",
      "rank": "84221",
    },
    "alchemicalHydra": {
      "kills": "563",
      "rank": "86937",
    },
    "artio": {
      "kills": "29",
      "rank": "39422",
    },
    "barrowsChests": {
      "kills": "918",
      "rank": "23496",
    },
    "bryophyta": {
      "kills": "10",
      "rank": "98561",
    },
    "callisto": {
      "kills": "203",
      "rank": "37908",
    },
    "calvarion": {
      "kills": "-1",
      "rank": "-1",
    },
    "cerberus": {
      "kills": "1116",
      "rank": "43130",
    },
    "chambersOfXeric": {
      "kills": "362",
      "rank": "49400",
    },
    "chambersOfXericChallengeMode": {
      "kills": "31",
      "rank": "26014",
    },
    "chaosElemental": {
      "kills": "152",
      "rank": "28772",
    },
    "chaosFanatic": {
      "kills": "230",
      "rank": "16285",
    },
    "commanderZilyana": {
      "kills": "460",
      "rank": "30105",
    },
    "corporealBeast": {
      "kills": "238",
      "rank": "32892",
    },
    "corruptedGauntlet": {
      "kills": "160",
      "rank": "70828",
    },
    "crazyArchaeologist": {
      "kills": "639",
      "rank": "2131",
    },
    "dagannothPrime": {
      "kills": "501",
      "rank": "48496",
    },
    "dagannothRex": {
      "kills": "540",
      "rank": "58608",
    },
    "dagannothSupreme": {
      "kills": "715",
      "rank": "31130",
    },
    "derangedArchaeologist": {
      "kills": "50",
      "rank": "22737",
    },
    "dukeSucellus": {
      "kills": "53",
      "rank": "16639",
    },
    "gauntlet": {
      "kills": "21",
      "rank": "101569",
    },
    "generalGraardor": {
      "kills": "304",
      "rank": "103836",
    },
    "giantMole": {
      "kills": "681",
      "rank": "43103",
    },
    "grotesqueGuardians": {
      "kills": "250",
      "rank": "54505",
    },
    "hespori": {
      "kills": "10",
      "rank": "440882",
    },
    "kalphiteQueen": {
      "kills": "303",
      "rank": "34494",
    },
    "kingBlackDragon": {
      "kills": "94",
      "rank": "267332",
    },
    "kraken": {
      "kills": "1122",
      "rank": "189991",
    },
    "kreearra": {
      "kills": "253",
      "rank": "45150",
    },
    "krilTsutsaroth": {
      "kills": "558",
      "rank": "11657",
    },
    "leviathan": {
      "kills": "24",
      "rank": "9825",
    },
    "mimic": {
      "kills": "1",
      "rank": "98262",
    },
    "nex": {
      "kills": "402",
      "rank": "33720",
    },
    "nightmare": {
      "kills": "151",
      "rank": "21406",
    },
    "obor": {
      "kills": "11",
      "rank": "104505",
    },
    "phantomMuspah": {
      "kills": "105",
      "rank": "38484",
    },
    "phosanisNightmare": {
      "kills": "100",
      "rank": "15104",
    },
    "sarachnis": {
      "kills": "50",
      "rank": "122661",
    },
    "scorpia": {
      "kills": "151",
      "rank": "27850",
    },
    "skotizo": {
      "kills": "20",
      "rank": "216447",
    },
    "spindel": {
      "kills": "-1",
      "rank": "-1",
    },
    "tempoross": {
      "kills": "50",
      "rank": "267024",
    },
    "theatreOfBlood": {
      "kills": "550",
      "rank": "10718",
    },
    "theatreOfBloodHardMode": {
      "kills": "50",
      "rank": "8651",
    },
    "thermonuclearSmokeDevil": {
      "kills": "739",
      "rank": "68392",
    },
    "tombsOfAmascut": {
      "kills": "39",
      "rank": "81113",
    },
    "tombsOfAmascutExpertMode": {
      "kills": "108",
      "rank": "24474",
    },
    "tzKalZuk": {
      "kills": "13",
      "rank": "2922",
    },
    "tzTokJad": {
      "kills": "33",
      "rank": "11057",
    },
    "vardorvis": {
      "kills": "269",
      "rank": "8169",
    },
    "venenatis": {
      "kills": "187",
      "rank": "42602",
    },
    "vetion": {
      "kills": "103",
      "rank": "34219",
    },
    "vorkath": {
      "kills": "741",
      "rank": "91068",
    },
    "whisperer": {
      "kills": "34",
      "rank": "7711",
    },
    "wintertodt": {
      "kills": "122",
      "rank": "589999",
    },
    "zalcano": {
      "kills": "150",
      "rank": "58953",
    },
    "zulrah": {
      "kills": "3601",
      "rank": "17283",
    },
  },
  "minigames": {
    "bountyHunter": {
      "rank": "23417",
      "score": "8",
    },
    "bountyHunterLegacy": {
      "rank": "60751",
      "score": "49",
    },
    "bountyHunterRogues": {
      "rank": "-1",
      "score": "-1",
    },
    "bountyHunterRoguesLegacy": {
      "rank": "47505",
      "score": "23",
    },
    "clueScrollsAll": {
      "rank": "42398",
      "score": "762",
    },
    "clueScrollsBeginner": {
      "rank": "1304511",
      "score": "1",
    },
    "clueScrollsEasy": {
      "rank": "93819",
      "score": "52",
    },
    "clueScrollsElite": {
      "rank": "149450",
      "score": "21",
    },
    "clueScrollsHard": {
      "rank": "200804",
      "score": "97",
    },
    "clueScrollsMaster": {
      "rank": "52547",
      "score": "34",
    },
    "clueScrollsMedium": {
      "rank": "14020",
      "score": "557",
    },
    "leaguePoints": {
      "rank": "-1",
      "score": "-1",
    },
    "lms": {
      "rank": "14107",
      "score": "2348",
    },
    "pvpArena": {
      "rank": "222",
      "score": "4010",
    },
    "riftsClosed": {
      "rank": "148451",
      "score": "114",
    },
    "soulWarsZeal": {
      "rank": "-1",
      "score": "-1",
    },
  },
  "skills": {
    "agility": {
      "level": "99",
      "rank": "33109",
      "xp": "13311342",
    },
    "attack": {
      "level": "99",
      "rank": "37921",
      "xp": "25152516",
    },
    "construction": {
      "level": "99",
      "rank": "13824",
      "xp": "13332577",
    },
    "cooking": {
      "level": "99",
      "rank": "31005",
      "xp": "18342505",
    },
    "crafting": {
      "level": "99",
      "rank": "51121",
      "xp": "13739819",
    },
    "defence": {
      "level": "99",
      "rank": "15663",
      "xp": "26152190",
    },
    "farming": {
      "level": "99",
      "rank": "90162",
      "xp": "14729561",
    },
    "firemaking": {
      "level": "99",
      "rank": "79072",
      "xp": "13495334",
    },
    "fishing": {
      "level": "99",
      "rank": "49561",
      "xp": "13546091",
    },
    "fletching": {
      "level": "99",
      "rank": "6254",
      "xp": "20573009",
    },
    "herblore": {
      "level": "99",
      "rank": "6564",
      "xp": "15494407",
    },
    "hitpoints": {
      "level": "99",
      "rank": "19229",
      "xp": "64781004",
    },
    "hunter": {
      "level": "99",
      "rank": "34415",
      "xp": "13554349",
    },
    "magic": {
      "level": "99",
      "rank": "7140",
      "xp": "43468118",
    },
    "mining": {
      "level": "99",
      "rank": "41906",
      "xp": "13606515",
    },
    "overall": {
      "level": "2277",
      "rank": "13294",
      "xp": "526106150",
    },
    "prayer": {
      "level": "99",
      "rank": "63014",
      "xp": "13093675",
    },
    "ranged": {
      "level": "99",
      "rank": "26076",
      "xp": "60835870",
    },
    "runecrafting": {
      "level": "99",
      "rank": "18169",
      "xp": "14362827",
    },
    "slayer": {
      "level": "99",
      "rank": "40472",
      "xp": "17410558",
    },
    "smithing": {
      "level": "99",
      "rank": "19546",
      "xp": "13700333",
    },
    "strength": {
      "level": "99",
      "rank": "16360",
      "xp": "55199391",
    },
    "thieving": {
      "level": "99",
      "rank": "44936",
      "xp": "14108802",
    },
    "woodcutting": {
      "level": "99",
      "rank": "43326",
      "xp": "14115357",
    },
  },
}
`;
